Fix l1-order-mcmc Spring context: fundGenesisBIG uses PQKey not EC hex, payBigTo uses fromCoinKey, setServiceReady(true) in setUp